--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "@tiptap/extension-link": "^2.12.0",
     "@tiptap/extension-list-item": "^2.12.0",
     "@tiptap/extension-ordered-list": "^2.12.0",
+    "@tiptap/extension-placeholder": "^2.12.0",
     "@tiptap/extension-strike": "^2.12.0",
     "@tiptap/extension-underline": "^2.12.0",
     "@tiptap/react": "^2.12.0",
