--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,8 +41,10 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.5",
     "embla-carousel-react": "^8.6.0",
+    "format": "^0.2.2",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.506.0",
     "next-themes": "^0.4.6",
