--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,9 @@
     "dompurify": "^3.2.5",
     "embla-carousel-react": "^8.6.0",
     "format": "^0.2.2",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.506.0",
     "next-themes": "^0.4.6",
